using local crono and playing with some animation stuff

--- a/pcotm/shard.yml
+++ b/pcotm/shard.yml
@@ -9,4 +9,6 @@ crystal: 0.20.4
 
 dependencies:
   crono:
-    github: jwoertink/crono
+    #github: jwoertink/crono
+    path: /Users/jeremywoertink/Development/crystal/crono
+
